--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,6 @@
-<style>
-          {
-    background-image: url("http://wallmeta.com/wp-content/uploads/2015/02/Hawaii-Awesome-Wallpaper-Gallery-Desktop.jpg");
+{background-image: url("http://wallmeta.com/wp-content/uploads/2015/02/Hawaii-Awesome-Wallpaper-Gallery-Desktop.jpg");
      }
-          {
+        Table  {
             border-style:solid;
             border-width:4px;
             border-color:black;
@@ -53,4 +51,3 @@
          background-color:#20B2AA;
          border-color:#20B2AA;
     }
-  </style>
