--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-{background-image: url("http://wallmeta.com/wp-content/uploads/2015/02/Hawaii-Awesome-Wallpaper-Gallery-Desktop.jpg");
+        body {background-image: url("http://wallmeta.com/wp-content/uploads/2015/02/Hawaii-Awesome-Wallpaper-Gallery-Desktop.jpg");
      }
         Table  {
             border-style:solid;
@@ -6,7 +6,7 @@
             border-color:black;
             text-align:center;
           }
-          {
+        th  {
             border-style:solid;
             border-color:blue;
             border-width:2px;
